     default).

   - Updated the "fancy" characters for some header fields. Added new ones for
     personal and list messages.

   - Removed ~make-mu4e-bookmark~ which was obsoleted in version 1.3.9.

   - Removed header-fields ~:attachments~, ~:signature~, ~:encryption~ and
     ~:user-agent~. They're obsolete with the Gnus-based message viewer.

   - undo is now supported across message-saves

   - a lot of the internals have been changed:

     - =mu4e= is slowly moving from using the '=~'= to the more common '=--'=
       separator for private functions; i.e., =mu4e-foo= becomes =mu4e--foo=.

     - =mu4e-utils.el= had become a bit of a dumping ground for bits of code;
       it's gone now, with the functionality move to topic-specific files --
       =mu4e-folders.el=, =mu4e-bookmarks.el=, =mu4e-update.el=, and included in
       existing files.

     - the remaining common functionality has ended up in =mu4e-helpers.el=

     - =mu4e-search.el= takes the search-specific code from =mu4e-headers.el=, and
   	adds a minor-mode for the keybindings.

     - =mu4e-context.el= and =mu4e-update.el= also define minor modes with
   	keybindings, which saves a lot of code in the various views, since they
   	don't need explicitly bind all those function.

     - also =mu4e-vars.el= had become very big, we're refactoring the =defvar= /
   	=defcustom= declarations to the topic-specific files.

     - =mu4e-proc.el= has been renamed =mu4e-server.el=.

     - Between =mu= and =mu4e=, contact cells are now represented as a plist ~(:name
   	"Foo Bar" :email "foobar@example.com")~ rather than a cons-cell ~("Foo
   	Bar" . "foobar@example.com").~

   	If you have scripts depending on the old format, there's the
       ~mu4e-contact-cons~ function which takes a news-style contact and yields
       the old form.

    - Because of all these changes, it is recommended you remove older version
      of ~mu4e~ before reinstalling.

*** guile
